--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
             <div class="pendidikan">
                 <div class="first">
                     <img src="foto/sd.jpg" alt="SDN Bendungan">
+                    <h1>SDN Bendungan</h1>
                 </div>
                 <div class="second">
                     <img src="foto/smp.jfif" alt="SMP PGRI 1 Ciawi">
+                    <h1>SMP PGRI 1 Ciawi</h1>
                 </div>
                 <div class="third">
                     <img src="foto/smk.jpg" alt="SMK Wikrama Bogor">
+                    <h1>SMK Wikrama Bogor</h1>
                 </div>
             </div>
         </div>
