--- a/index.html
+++ b/index.html
@@ -76,5 +76,10 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="kaki">
+            <h3>&copy;MuhammadHaikal|2023</h3>
+        </div>
+    </footer>
 </body>
 </html>
