--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
                 <div class="isi">
                     <img src="foto/simpson.jpg" alt="Simpson">
                     <div class="bio">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel natus unde obcaecati quidem cupiditate quibusdam quia facilis temporibus
-                            doloribus distinctio saepe, aliquid in laborum dolorum tempora modi expedita, culpa illo. Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Dolores quae impedit at incidunt itaque dolore velit minus dignissimos, cum reprehenderit voluptatibus sapiente quaerat, rem,
-                            laudantium ut nobis sequi expedita architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, repellat. Ab, voluptates
-                            accusantium ad similique repellendus velit temporibus minima et debitis incidunt suscipit veritatis dolores, officia vero cupiditate hic dolorum.
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, architecto sapiente. Deserunt ex illum ducimus quos id praesentium totam. Dolor
-                            quibusdam quas, nisi tenetur ipsa repellat mollitia provident itaque accusamus!</p>
+                        <p><strong>Nama :</strong> Muhammad Haikal</p>
+                        <p><strong>Umur :</strong> 15 Tahun</p>
+                        <p><strong>Sekolah :</strong> SMK Wikrama Bogor</p>
+                        <p><strong>TTL :</strong> Bogor, 11 Maret 2008</p>
+                        <p><strong>Hobi :</strong> Silat</p>
+                        <p><strong>Kata Motivasi :</strong> "Hari ini adalah kesempatan untuk membangun hari esok yang diinginkan."</p>
                     </div>
                 </div>
             </div>
